--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "/Users/aa08058/.local/share/virtualenvs/maintenance-log-backend-gNjWrrry/bin/python"
+    "python.pythonPath": "/Users/aa08058/.local/share/virtualenvs/maintenance-log-backend-gNjWrrry/bin/python3.8"
 }
