--- a/Pipfile
+++ b/Pipfile
@@ -1,16 +1,16 @@
 [[source]]
-name = "pypi"
-url = "https://pypi.org/simple"
+url = "https://pypi.python.org/simple"
 verify_ssl = true
+name = "pypi"
 
 [dev-packages]
 
 [packages]
+python-dotenv = "*"
 django = "*"
 djangorestframework = "*"
 django-rest-knox = "*"
 django-storages = "*"
-python-dotenv = "*"
 boto3 = "*"
 psycopg2-binary = "*"
 django-extensions = "*"
