--- a/Pipfile
+++ b/Pipfile
@@ -1,12 +1,12 @@
 [[source]]
-url = "https://pypi.python.org/simple"
+url = "https://pypi.org/simple"
 verify_ssl = true
 name = "pypi"
 
 [dev-packages]
 
 [packages]
-"bob-builder" = "==0.0.13"
+bob-builder = "==0.0.13"
 python-dotenv = "*"
 django = "*"
 djangorestframework = "*"
@@ -18,7 +18,6 @@ django-extensions = "*"
 pillow = "*"
 gunicorn = "*"
 django-heroku = "*"
-python = "*"
 
 [requires]
-python_version = "3.8.0"
+python_version = "3.8.2"
