issue with django-phone-field not being installed

--- a/Pipfile
+++ b/Pipfile
@@ -18,6 +18,7 @@ django-extensions = "*"
 pillow = "*"
 gunicorn = "*"
 django-heroku = "*"
+django-phone-field = "*"
 
 [requires]
 python_version = "3.8.2"
