added django-coors-headers to pipfile.lock

--- a/Pipfile
+++ b/Pipfile
@@ -19,6 +19,7 @@ pillow = "*"
 gunicorn = "*"
 django-heroku = "*"
 django-phone-field = "*"
+django-cors-headers = "*"
 
 [requires]
 python_version = "3.8.2"
