added a couple programs for data loading

--- a/Pipfile
+++ b/Pipfile
@@ -22,4 +22,5 @@ django-phone-field = "*"
 django-cors-headers = "*"
 
 [requires]
-python_version = "3.8.2"
+python_version = "3.7.0"
+urllib3 = "1.25.9"
