--- a/Pipfile
+++ b/Pipfile
@@ -20,6 +20,7 @@ gunicorn = "*"
 django-heroku = "*"
 django-phone-field = "*"
 django-cors-headers = "*"
+django-seed = "*"
 
 [requires]
 python_version = "3.7.0"
